[package]
name = "ironguard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Required for WASM

[dependencies]
rand = "0.8"
blake3 = "1.0"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.21"
num_cpus = "1.0"
wasm-bindgen = "0.2"      # For JS bindings
js-sys = "0.3"            # For JS interactions
web-sys = "0.3"           # For web-specific features
getrandom = { version = "0.2", features = ["js"] }  # For random numbers in WASM

[profile.release]
opt-level = 3
lto = true
